fix skeleton and wrap link

--- a/src/assets/css/usp.css
+++ b/src/assets/css/usp.css
@@ -43,7 +43,7 @@
 }
 
 .usp__content__title {
-  font-family: "Gilroy-SemiBold";
+
   font-size: 20px;
   line-height: 20px;
   /* identical to box height, or 100% */
